recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:2: error: illegal start of simple expression
  for(i<-1 to 4):
                ^